--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,3 @@
 // <reference types='react-scripts' />
 require('dotenv').config()
-REACT_APP_PAYPAL_CLIENT_ID = "AU-FOv_SBzrQcMOTOu3SzQdl2rOff0fZ1Dap7cEHWlI5ntb-uFqWcue6xeyfW-MOF0I__MgAYaczbe1K"
+REACT_APP_PAYPAL_CLIENT_ID ="YOUR PAYPAL CLIENT ID"
